--- a/MSBank/Pages/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/MSBank/Pages/Shared/AdminLTE/_MainNavigation.cshtml
@@ -16,7 +16,7 @@
                 <img src="~/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">User Name here</a>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
                     <a asp-page="/Account/Index" class="nav-link">
                         <i class="nav-icon fas fa-credit-card"></i>
                         <p>
-                            Account
+                            Accounts
                         </p>
                     </a>
                 </li>
