--- a/MSBank/Pages/Shared/_Layout.cshtml
+++ b/MSBank/Pages/Shared/_Layout.cshtml
@@ -66,5 +66,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- REQUIRED SCRIPTS -->
 
     <partial name="AdminLTE/_Scripts" />
+
+      @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
